# communication-dna

./: .gitignore  EVAL_HISTORY.md  EVAL_REFLECTION_v1.5_to_v2.8.md  PRD_GENERATION_GUIDE.md  README.md  REPORT.md  calibrate_detector.py  demo_one_sentence_prd.py  demo_prd.py  demo_prd_flappy_scratch.py  eval_conversation.py  eval_conversation_results.json  eval_detector.py  eval_intention.py  eval_intention_results_v0.1.json  eval_intention_results_v0.2.json  eval_intention_results_v0.3-diag.json  eval_intention_results_v0.4.json  eval_intention_results_v0.5.json  eval_intention_results_v0.6.json  eval_intention_results_v0.7.json  eval_intention_results_v0.7b.json  eval_intention_results_v0.8.json  eval_intention_results_v0.9-domains.json  eval_intention_results_v1.0.json  eval_intention_results_v1.1.json  eval_intention_results_v1.2.json  eval_intention_results_v1.3.json  eval_intention_results_v1.4.json  eval_intention_results_v1.5.json  eval_intention_results_v1.6.json  eval_intention_results_v1.7.json  eval_intention_results_v1.8.json  eval_intention_results_v1.9.json  eval_intention_results_v2.0-final.json  eval_intention_results_v2.0.json  eval_prd_chinese_test.py  eval_prd_iteration.py  eval_prd_short_test.py  eval_prd_v1_results.json  (+35 more)
assessment/: __init__.py  app.py  database.py  exam_service.py  models.py  questions.json  scenario_scorer.py
communication_dna/: catalog.py  detector.py  matcher.py  models.py  speaker.py  storage.py
docs/: ONE_SENTENCE_PRD_REPORT.md  PDCA_GAME_CODE_REPORT.md  PDCA_WIREFRAME_REPORT.md  PRD_GENERATOR_TEST_REPORT.md  PRD_ITERATION_REPORT.md  SYSTEM_METHODOLOGY_REPORT.md  intention-graph-iteration-report.md
examples/: analyze_and_mimic.py  analyze_intentions.py
intention_graph/: __init__.py  asset_analyzer.py  clarify.py  comparator.py  (+17 more)
(+127 files in other folders)
