[project]
name = "communication-dna"
version = "1.0.0"
description = "Human communication style feature vector system"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
search = [
    "duckduckgo-search>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
