[project]
name = "communication-dna"
version = "1.0.0"
description = "Human communication style feature vector system"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "playwright>=1.40",
]
search = [
    "duckduckgo-search>=7.0",
]
assessment = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (require API calls, deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
